# Discowl-Next

./: .gitignore
discowl-browser/: Cargo.toml  PERFORMANCE_ANALYSIS.md  build.bat  build.rs  info.md
discowl-browser/.cargo/: config.toml
discowl-browser/renderer/: index.html  styles.css
discowl-browser/src/: discowl.slint  main.rs
discowl-browser/src/webview/: adapter.rs  delegate.rs  mod.rs  waker.rs
discowl-browser/src/webview/events_utils/: mod.rs  url_event_util.rs
discowl-browser/src/webview/rendering_context/: mod.rs  servo_rendering_adapter.rs
