[package]
name = "discowl"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.17", features = ["backend-winit", "renderer-femtovg-wgpu", "unstable-wgpu-29"] }
servo = "0.3.0"
raw-window-handle = "0.6"
url = "2.5"
smol = "2.0"
gleam = "0.15"
glow = "0.17"
image = "0.25"
euclid = "0.22"
winit = "0.30.12"
rustls = "0.23"
surfman = { version = "0.12", features = ["chains"] }

[target.'cfg(target_os = "windows")'.dependencies]
surfman = { version = "0.12", features = ["chains", "sm-angle-default"] }
servo = { version = "0.3.0", features = ["no-wgl"] }

[build-dependencies]
slint-build = "1.17"
gl_generator = "0.14"
